HETS-103 new generated files, updates from schoolbus
