# Server/src/HETSAPI/ViewModels/UserViewModel.cs
@@ -17,6 +17,7 @@ using System.Collections.Generic;
 using System.Collections.ObjectModel;
 using System.Runtime.Serialization;
 using Newtonsoft.Json;
+using HETSAPI.Models;
 
 namespace HETSAPI.ViewModels
 {
@@ -42,54 +43,75 @@ namespace HETSAPI.ViewModels
         /// <param name="Surname">Surname.</param>
         /// <param name="Initials">Initials.</param>
         /// <param name="Email">Email.</param>
-        public UserViewModel(int Id, bool Active, string GivenName = null, string Surname = null, string Initials = null, string Email = null)
+        public UserViewModel(int Id, string GivenName, string Surname, bool Active, string SmUserId, string Email = null, List<UserRole> UserRoles = null, List<GroupMembership> GroupMemberships = null, District District = null)
         {
-            
+
             this.Id = Id;
-            
-            this.Active = Active;
             this.GivenName = GivenName;
             this.Surname = Surname;
-            this.Initials = Initials;
             this.Email = Email;
-            
+            this.Active = Active;
+            this.UserRoles = UserRoles;
+            this.GroupMemberships = GroupMemberships;
+            this.District = District;
+            this.UserRoles = UserRoles;
+
         }
 
         /// <summary>
         /// Gets or Sets Id
         /// </summary>
-        [DataMember(Name="id")]
+        [DataMember(Name = "id")]
         public int Id { get; set; }
 
         /// <summary>
         /// Gets or Sets Active
         /// </summary>
-        [DataMember(Name="active")]
+        [DataMember(Name = "active")]
         public bool Active { get; set; }
+
+        /// <summary>
+        /// Gets or Sets SmUserId
+        /// </summary>
+        [DataMember(Name = "smUserId")]
+        public string SmUserId { get; set; }
 
         /// <summary>
         /// Gets or Sets GivenName
         /// </summary>
-        [DataMember(Name="givenName")]
+        [DataMember(Name = "givenName")]
         public string GivenName { get; set; }
 
         /// <summary>
         /// Gets or Sets Surname
         /// </summary>
-        [DataMember(Name="surname")]
+        [DataMember(Name = "surname")]
         public string Surname { get; set; }
-
-        /// <summary>
-        /// Gets or Sets Initials
-        /// </summary>
-        [DataMember(Name="initials")]
-        public string Initials { get; set; }
 
         /// <summary>
         /// Gets or Sets Email
         /// </summary>
-        [DataMember(Name="email")]
+        [DataMember(Name = "email")]
         public string Email { get; set; }
+
+        /// <summary>
+        /// Gets or Sets UserRoles
+        /// </summary>
+        [DataMember(Name = "UserRoles")]
+        public List<UserRole> UserRoles { get; set; }
+
+        /// <summary>
+        /// Gets or Sets GroupMemberships
+        /// </summary>
+        [DataMember(Name = "GroupMemberships")]
+        public List<GroupMembership> GroupMemberships { get; set; }
+
+        /// <summary>
+        /// The District that the User belongs to
+        /// </summary>
+        /// <value>The District that the User belongs to</value>
+        [DataMember(Name = "District")]
+        public District District { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
@@ -103,8 +125,11 @@ namespace HETSAPI.ViewModels
             sb.Append("  Active: ").Append(Active).Append("\n");
             sb.Append("  GivenName: ").Append(GivenName).Append("\n");
             sb.Append("  Surname: ").Append(Surname).Append("\n");
-            sb.Append("  Initials: ").Append(Initials).Append("\n");
             sb.Append("  Email: ").Append(Email).Append("\n");
+            if (this.District != null)
+            {
+                sb.Append("  District: ").Append(this.District.ToString()).Append("\n");
+            }
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -142,35 +167,35 @@ namespace HETSAPI.ViewModels
             if (ReferenceEquals(null, other)) { return false; }
             if (ReferenceEquals(this, other)) { return true; }
 
-            return 
+            return
                 (
                     this.Id == other.Id ||
-                    
+
                     this.Id.Equals(other.Id)
-                ) && 
+                ) &&
                 (
                     this.Active == other.Active ||
                     this.Active.Equals(other.Active)
-                ) && 
+                ) &&
                 (
                     this.GivenName == other.GivenName ||
                     this.GivenName != null &&
                     this.GivenName.Equals(other.GivenName)
-                ) && 
+                ) &&
                 (
                     this.Surname == other.Surname ||
                     this.Surname != null &&
                     this.Surname.Equals(other.Surname)
-                ) && 
-                (
-                    this.Initials == other.Initials ||
-                    this.Initials != null &&
-                    this.Initials.Equals(other.Initials)
-                ) && 
+                ) &&
                 (
                     this.Email == other.Email ||
                     this.Email != null &&
                     this.Email.Equals(other.Email)
+                ) &&
+                (
+                    this.District == other.District ||
+                    this.District != null &&
+                    this.District.Equals(other.District)
                 );
         }
 
@@ -196,13 +221,13 @@ namespace HETSAPI.ViewModels
                 {
                     hash = hash * 59 + this.Surname.GetHashCode();
                 }
-                if (this.Initials != null)
-                {
-                    hash = hash * 59 + this.Initials.GetHashCode();
-                }
                 if (this.Email != null)
                 {
                     hash = hash * 59 + this.Email.GetHashCode();
+                }
+                if (this.Email != null)
+                {
+                    hash = hash * 59 + this.District.GetHashCode();
                 }
                 return hash;
             }
